[project]
name = "pulid_comfyui"
description = "[a/PuLID](https://github.com/ToTheBeginning/PuLID) ComfyUI native implementation."
version = "1.0.0"
license = "LICENSE"
dependencies = ["facexlib", "insightface", "onnxruntime", "onnxruntime-gpu", "ftfy", "timm"]

[project.urls]
Repository = "https://github.com/cubiq/PuLID_ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "PuLID_ComfyUI"
Icon = ""
