[project]
name = "pulid_comfyui"
description = "PuLID ComfyUI native implementation."
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = ["facexlib", "insightface", "onnxruntime", "onnxruntime-gpu", "ftfy", "timm"]

[project.urls]
Repository = "https://github.com/cubiq/PuLID_ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "matteo"
DisplayName = "PuLID_ComfyUI"
Icon = ""
